feat: :sparkles: Cambios en la plantilla html con respecto a la paginacion, cambios de css para el footer e imagenes nuevas

--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,11 @@
 }
 
 body {
-  background-image: url("../storage/img/Background.png");
+  background-image: url("../storage/img/prueba.gif");
   background-position: center;
   background-position-y: top;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 *::-webkit-scrollbar {
@@ -29,7 +31,6 @@ body {
 }
 
 *::-webkit-scrollbar-thumb {
-  border: 1px solid var(--color--five);
   background-color: var(--color--one--rgba);
 }
 
@@ -96,6 +97,7 @@ body {
   gap: 10px;
   margin: 0 var(--layout-description-container-x);
   margin-bottom: 25px;
+  align-items: flex-start;
 }
 
 .description__container div:last-child h3 {
@@ -177,14 +179,6 @@ body {
     "table__colum__1";
 }
 
-.section__information__2 div:first-child {
-  /* background: #d9ff00; */
-  grid-area: carusel__colum__1;
-  display: flex;
-  overflow-x: auto;
-  gap: 10px;
-  justify-content: space-evenly;
-}
 
 .section__information__2 div:first-child > .carousel__item {
   /* flex: 1; */
@@ -230,11 +224,12 @@ body {
   color: var(--color--five);
 }
 .section__image {
-  /* background: orange; */
   grid-area: colum__2;
   display: flex;
   overflow-x: auto;
   align-items: center;
+  height: 230px;
+  overflow-y: hidden;
 }
 
 .section__image > .carousel__item {
@@ -244,8 +239,8 @@ body {
 }
 
 .section__image > .carousel__item img {
-  width: 305px;
-  height: 190px;
+  width: 265px;
+  height: 180px;
   border-radius: 10px;
   object-fit: cover;
   box-shadow: 0px 0px 10px var(--color--one);
@@ -323,8 +318,11 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-position-y: bottom;
-  background-size: cover;
+  /* background-size: cover; */
   z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer ul {
@@ -332,6 +330,11 @@ body {
   justify-content: center;
   align-items: center;
   gap: 50px;
+  width: 80%;
+  /* overflow: scroll; */
+  height: 80%;
+  overflow-x: scroll;
+  scrollbar-width: none;
 }
 
 .footer ul li {
@@ -344,13 +347,14 @@ body {
   flex-direction: column;
   align-items: center;
   color: var(--color--two);
+  font-size: small;
 }
 .select {
-  padding: 8px 0;
-  border-bottom: 4px solid var(--color--five);
+  padding: 0 0 2px 0;
+  border-bottom: 3px solid var(--color--five);
 }
 .select img{
-  width: 35px;
+  width: 30px;
 }
 .nav__information {
   /* background: red; */
