feat: :sparkles: Agregar componente de tabla de etapas de cohete
Se creó el componente de tabla de etapas de cohete, que permite mostrar información detallada sobre las etapas de un cohete. El componente incluye una función para mostrar la descripción de cada etapa, así como un parámetro de título personalizable.

--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ body {
   /* background: darkblue; */
   grid-area: table__colum__2;
 }
-.information__table__2 h3 {
+.information__table__2 h3, .description__container2 h3 {
   text-transform: uppercase;
   padding: 0 25px;
   margin-bottom: 5px;
