feat: ✨ Se ha agregado funcionalidad de paginación para navegar por la lista de capsulas.

--- a/css/style.css
+++ b/css/style.css
@@ -360,7 +360,7 @@ body {
   padding: 0 0 2px 0;
   border-bottom: 3px solid var(--color--five);
 }
-.select img{
+.footer img{
   width: 30px;
 }
 .nav__information {
