feat: ✨ Añadir función slideCrew para crear y mostrar un slideshow
- Implementar la función slideCrew para crear un contenedor de slideshow dinámico.
- Desestructurar datos de cápsula para obtener imágenes de Flickr y parches.
- Agregar verificaciones para asegurar la existencia de elementos antes de manipularlos.
- Implementar manejo básico de errores para casos donde los datos o elementos del DOM no están disponibles.
- Incluir lógica del carrusel para mostrar las imágenes en un slider con transición automática.

--- a/css/style.css
+++ b/css/style.css
@@ -464,3 +464,11 @@ progress[value]::-moz-progress-bar {
   border-radius: 10em;
   background: var(--color);
 }
+
+
+.slider img {
+  height: 260px;
+  border-radius: 10px;
+  object-fit: cover;
+  box-shadow: 0px 0px 10px var(--color--one);
+}
