--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ body {
 }
 .table__container__1 {
   /*background: orange; */
-  height: 100%;
+  /* height: 100%; */
   overflow-y: auto;
   padding: 10px 5px;
 }
@@ -229,6 +229,7 @@ body {
 }
 .table__container__1 div strong {
   color: var(--color--five);
+  text-align: end;
 }
 .section__image {
   grid-area: colum__2;
@@ -471,4 +472,8 @@ progress[value]::-moz-progress-bar {
   border-radius: 10px;
   object-fit: cover;
   box-shadow: 0px 0px 10px var(--color--one);
+}
+
+#youtube-video{
+  height: 166px;
 }
