--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body {
   position: relative;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: 2.3fr 5fr 1fr;
+  grid-template-rows: 3fr 5fr 1.5fr;
   grid-template-areas:
     "section__header"
     "section__main"
@@ -322,7 +322,7 @@ body {
   position: absolute;
   bottom: 0;
   left: 0%;
-  height: 10%;
+  height: 100%;
   background-repeat: no-repeat;
   background-position: center;
   background-position-y: bottom;
@@ -331,6 +331,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  grid-area: section__footer;
 }
 
 .footer ul {
@@ -344,7 +345,10 @@ body {
   overflow-x: auto;
   overflow-y: hidden;
   /* scrollbar-width: none; */
-  height: 100%;
+  height: 50%;
+  position: absolute;
+  bottom: 10%;
+  left: 10.3%;
 }
 
 .footer ul li {
