--- a/css/style.css
+++ b/css/style.css
@@ -364,19 +364,19 @@ body {
 
 .footer ul {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: center; */
   gap: 10px;
-  width: 80%;
+  width: 71%;
   /* overflow: scroll; */
   height: 80%;
   overflow-x: auto;
   overflow-y: hidden;
   /* scrollbar-width: none; */
-  height: 50%;
+  height: 53%;
   position: absolute;
-  bottom: 0;
-  left: 10.3%;
+  bottom: 4px;
+  left: 14.3%;
 }
 
 .footer ul li {
